using System.ComponentModel.DataAnnotations;
using System.ComponentModel.DataAnnotations.Schema;

namespace Backend_Boarding_house_management_system.Entities
{
    public class Rating
    {
        [Key]
        [StringLength(50)]
        public string Id { get; set; } = null!;

        [Required]
        [StringLength(50)]
        public string TenantId { get; set; } = null!;

        [Required]
        [StringLength(50)]
        public string PropertyId { get; set; } = null!;

        [Required]
        public int Stars { get; set; }

        [Required]
        public string Content { get; set; } = null!;

        [Required]
        public string AIAttitude { get; set; } = null!;  // Positive, Negative, Neutral

        [Required]
        public DateTime CreatedAt { get; set; } = DateTime.UtcNow;

        [ForeignKey(nameof(TenantId))]
        public User Tenant { get; set; } = null!;

        [ForeignKey(nameof(PropertyId))]
        public Property Property { get; set; } = null!;

        public ICollection<RatingAspect> RatingAspects { get; set; } = new List<RatingAspect>();
    }
}
