// =============================================
// ENUMS (định nghĩa tập trung)
// =============================================
Enum user_role {
  Admin
  Landlord
  Tenant
}

Enum property_status {
  PendingApproval
  Approved
  Rejected
  Available
  Rented
  Repairing
  NearExpiry
}

Enum contract_status {
  Draft
  Active
  NearExpiry
  Expired
  Terminated
  Cancelled
}

Enum amenity_status {
  Working
  Broken
  Repairing
}

Enum invoice_status {
  Pending
  Partial
  Paid
}

Enum payment_method {
  Cash
  BankTransfer
  Online
}

Enum appointment_status {
  Pending
  Confirmed
  Rejected
  Cancelled
}

Enum notification_type {
  Invoice
  Appointment
  Contract
  Message
  System
  Rating
}

Enum rating_attitude {
  Positive
  Negative
  Neutral
}

Enum complaint_status {
  Pending
  Processing
  Resolved
}

Enum document_type {
  IDCard
  ResidencePermit
  Other
}

Enum complaint_related_type {
  Invoice
  Contract
  Property
}

Enum review_aspect {
  RoomQuality
  Noise
  Wifi
  Utilities
  Parking
  Security
  Environment
  Landlord
  Location
  Price
  Overall
}

// =============================================
// TABLES
// =============================================
Table Users {
  Id varchar(50) [pk, not null]
  Email varchar(256) [unique, not null]
  NormalizedEmail varchar(256) [unique]
  EmailConfirmed boolean [not null, default: false]
  PasswordHash text
  PhoneNumber varchar(20)
  PhoneNumberConfirmed boolean [default: false]
  TwoFactorEnabled boolean [default: false]
  LockoutEnd datetimeoffset
  LockoutEnabled boolean [default: true]
  AccessFailedCount int [default: 0]
  SecurityStamp varchar(255)
  ConcurrencyStamp varchar(255)

  FullName varchar(100) [not null]
  Address varchar(255)
  Role user_role [not null]
  ReputationScore int [default: 0, note: 'Điểm uy tín chủ trọ, tự động +1/0/-1 từ Ratings']
  AvatarUrl varchar(255)
  CreatedAt datetime [not null, default: `now()`]
  UpdatedAt datetime
}

Table Areas {
  Id varchar(50) [pk, not null]
  Name varchar(100) [not null]
  Address varchar(255) [not null]
  Latitude decimal(10,6)
  Longitude decimal(10,6)
  RoomCount int [default: 0]
  Description text
  LandlordId varchar(50) [ref: > Users.Id, not null]
  CreatedAt datetime [not null, default: `now()`]
  UpdatedAt datetime
}

Table Properties {
  Id varchar(50) [pk, not null]
  LandlordId varchar(50) [ref: > Users.Id, not null]
  AreaId varchar(50) [ref: > Areas.Id]
  PropertyName varchar(50) [not null]
  Size decimal(5,2) [not null]
  Price decimal(18,2) [not null]
  Status property_status [not null, default: 'PendingApproval']
  Description text
  Address varchar(255)
  Latitude decimal(10,6)
  Longitude decimal(10,6)
  RejectionReason text
  CreatedAt datetime [not null, default: `now()`]
  UpdatedAt datetime
}

Table PropertyImages {
  Id varchar(50) [pk, not null]
  PropertyId varchar(50) [ref: > Properties.Id, not null]
  ImageUrl varchar(255) [not null]
  IsPrimary boolean [default: false]
  CreatedAt datetime [not null, default: `now()`]
}

Table Amenities {
  Id varchar(50) [pk, not null]
  Name varchar(100) [unique, not null]
  Description varchar(255)
}

Table RoomAmenities {
  Id varchar(50) [pk, not null]
  PropertyId varchar(50) [ref: > Properties.Id, not null]
  AmenityId varchar(50) [ref: > Amenities.Id, not null]
  Status amenity_status [default: 'Working']
  Note varchar(255)
}

Table Contracts {
  Id varchar(50) [pk, not null]
  PropertyId varchar(50) [ref: > Properties.Id, not null]
  TenantId varchar(50) [ref: > Users.Id, not null]
  StartDate date [not null]
  EndDate date [not null]
  Deposit decimal(18,2) [not null]
  Terms text
  ContractFileUrl varchar(255) [note: 'PDF hợp đồng đã ký']
  Status contract_status [not null, default: 'Draft']
  CreatedAt datetime [not null, default: `now()`]
  UpdatedAt datetime

  ActualEndDate date
  HandoverNote text
  DeductionAmount decimal(18,2) [default: 0]
  DeductionReason text
  RefundAmount decimal(18,2) [default: 0]
  HandoverConfirmedBy varchar(50) [ref: > Users.Id]
  HandoverConfirmedAt datetime
}

Table Invoices {
  Id varchar(50) [pk, not null]
  ContractId varchar(50) [ref: > Contracts.Id, not null]
  Period date [not null]
  RentAmount decimal(18,2) [not null]
  OldElectricityReading decimal(10,2)
  NewElectricityReading decimal(10,2)
  ElectricityCost decimal(18,2)
  OldWaterReading decimal(10,2)
  NewWaterReading decimal(10,2)
  WaterCost decimal(18,2)
  OtherFees decimal(18,2)
  Penalty decimal(18,2) [default: 0]
  Total decimal(18,2) [not null]
  ReceiptUrl varchar(255) [note: 'Ảnh biên lai Tenant upload']
  Note varchar(255)
  Status invoice_status [default: 'Pending']
  InvoiceUrl varchar(255) [note: 'PDF hóa đơn']
  DueDate date [not null]
  CreatedAt datetime [not null, default: `now()`]
  UpdatedAt datetime
}

Table Payments {
  Id varchar(50) [pk, not null]
  InvoiceId varchar(50) [ref: > Invoices.Id, not null]
  Amount decimal(18,2) [not null]
  PaymentDate datetime [default: `now()`]
  Method payment_method [not null]
  Note varchar(255)
  CreatedAt datetime [default: `now()`]
}

Table Appointments {
  Id varchar(50) [pk, not null]
  PropertyId varchar(50) [ref: > Properties.Id, not null]
  TenantId varchar(50) [ref: > Users.Id, not null]
  LandlordId varchar(50) [ref: > Users.Id, not null]
  AppointmentDateTime datetime [not null]
  Status appointment_status [default: 'Pending']
  Note varchar(255)
  CreatedAt datetime [default: `now()`]
  UpdatedAt datetime
}

Table Messages {
  Id varchar(50) [pk, not null]
  SenderId varchar(50) [ref: > Users.Id, not null]
  ReceiverId varchar(50) [ref: > Users.Id, not null]
  Content text [not null]
  Timestamp datetime [default: `now()`]
  IsRead boolean [default: false]
  PropertyId varchar(50) [ref: > Properties.Id]
  ContractId varchar(50) [ref: > Contracts.Id]
}

Table Notifications {
  Id varchar(50) [pk, not null]
  UserId varchar(50) [ref: > Users.Id, not null]
  Type notification_type [not null]
  Content varchar(255) [not null]
  IsRead boolean [default: false]
  Timestamp datetime [default: `now()`]
  RelatedId varchar(50)
}

Table SearchHistories {
  Id varchar(50) [pk, not null]
  UserId varchar(50) [ref: > Users.Id, not null]
  Filters json [not null]
  Timestamp datetime [default: `now()`]
}

Table ViewHistories {
  Id varchar(50) [pk, not null]
  UserId varchar(50) [ref: > Users.Id, not null]
  PropertyId varchar(50) [ref: > Properties.Id, not null]
  Timestamp datetime [default: `now()`]
}

Table TenantDocuments {
  Id varchar(50) [pk, not null]
  TenantId varchar(50) [ref: > Users.Id, not null]
  DocumentType document_type [not null]
  FileUrl varchar(255) [not null]
  Note varchar(255)
  CreatedAt datetime [default: `now()`]
}

Table Ratings {
  Id varchar(50) [pk, not null]
  TenantId varchar(50) [ref: > Users.Id, not null]
  PropertyId varchar(50) [ref: > Properties.Id, not null]
  Stars int [not null, note: '1-5']
  Content text [not null]
  AIAttitude rating_attitude [not null]
  CreatedAt datetime [not null, default: `now()`]
}

Table Complaints {
  Id varchar(50) [pk, not null]
  CreatorId varchar(50) [ref: > Users.Id, not null]
  RelatedType complaint_related_type [not null]
  RelatedId varchar(50) [not null]
  Title varchar(200) [not null]
  Content text [not null]
  Status complaint_status [default: 'Pending']
  AdminResponse text
  ResolvedAt datetime
  CreatedAt datetime [default: `now()`]
}

Table RatingAspects {
  Id varchar(50) [pk, not null]
  RatingId varchar(50) [ref: > Ratings.Id, not null]
  Aspect review_aspect [not null]
  Sentiment rating_attitude [not null]
  Confidence decimal(3,2)
  CreatedAt datetime [not null, default: `now()`]
}

Table PropertyAspectScores {
  Id varchar(50) [pk, not null]
  PropertyId varchar(50) [ref: > Properties.Id, not null]
  Aspect review_aspect [not null]
  
  PositiveCount int [default: 0]
  NegativeCount int [default: 0]
  NeutralCount int [default: 0]
  TotalCount int [default: 0]                    // = Positive + Negative + Neutral
  
  WeightedScore decimal(10,2) [default: 0]
  
  LastUpdated datetime [not null, default: `now()`]
}